* Feb 12 2001 hship

Fix some bad JavaDoc comments.
Install accidentally ommitted classes.

* Feb 12 2001 hship

Replace NullOutputStream with NullResponseWriter.
Minor formatting changes (for readability) to certain component's output.
Standardize of "disabled" (with a default of false) for all components (there was
previously a mix of "enabled" and "disabled").
Simplify the ShowInspector component (remove the parameters that allow its image
to be customized).

* Feb 9 2001 hship

Have RequestContext implement IRender.

* Feb 7 2001 hship

Add some logging to AssetExternalizer.
Have RequestContext emit ServletContext init parameters inside write().
Fix a bug that prevented asset externalization from working (got the URL
from a servlet init param, not the servlet context).
Explicitly set the width and height of the tabs on the Inspector page.
Remove indentation support from IResponseWriter and implementations.
Add the Block and InsertBlock components.

* Feb 6 2001 hship

Add missing method getMaximumLengthBinding to TextField.

* Feb 6 2001 hship

Don't create new page recorder instances until actually needed.
Actually invoke the ILifeCycle finishLoad() method.
Allow informal parameters for the validating text field components (but apply them
to the underlying TextField).

* Jan 26 2001 hship

Remove IRequestCycle from the parameter list for RequestCycleException and all sub-exceptions.
Vastly improve the Script component and related classes.

* Jan 26 2001 hship

Revisit links and event handlers ... again!  ServiceLinks now support
a well-defined set of events, but can handle any number of JavaScript
functions.
Add some more documentation to the DTDs.
Rename IBinding.getValue() to getObject().
Rename IBinding.setValue() to setObject().
Add IBinding.getObject(String,Class).

* Jan 25 2001 hship

Get log4j javadoc from jakarta.apache.org.

* Jan 25 2001 hship

Pool PageLoaders.
Fix some latent threading bugs in PropertyAccessor and PageSource.